# Test_task_for_TeamUp

./: README.md  pyproject.toml
config/: settings.py  urls.py
testing/: models.py  serializers.py  urls.py  views.py
testing/migrations/: 0001_initial.py  0002_alter_test_iq_test_pass_time.py
