[tool.poetry]
name = "test-task-for-teamup"
version = "0.1.0"
description = ""
authors = ["Rajabboy757 <rajrajrajradju@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task_for_teamup"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2"
djangorestframework = "^3.14"
django-environ = "^0.9"
drf-yasg = "^1.21.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
